kubernetes/apps/networking/homelab/unifi/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: unifi
  namespace: networking
spec:
  ports:
    - name: unifi-app
      port: 80
      protocol: TCP
      targetPort: 8443
  type: ClusterIP
