kubernetes/apps/networking/homelab/unifi/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unifi
  namespace: networking
  annotations:
    external-dns/is-public: "true"
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-certificate: "${SECRET_DOMAIN/./-}-production-tls"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-verify: "false"
spec:
  tls:
    - hosts:
        - "unifi.${SECRET_DOMAIN}"
      secretName: "${SECRET_DOMAIN/./-}-production-tls"
  rules:
    - host: "unifi.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: unifi
                port:
                  name: unifi-app
